--- a/notebooks/data_visualization.ipynb
+++ b/notebooks/data_visualization.ipynb
@@ -13,7 +13,7 @@
    "id": "be03db71-ee74-4554-9ddc-034621a49472",
    "metadata": {},
    "source": [
-    "## __INT Data__"
+    "## __WHT Data__"
    ]
   },
   {
@@ -79,12 +79,12 @@
     "import glob, numpy as np, pandas as pd, matplotlib.pyplot as plt, seaborn as sns\n",
     "\n",
     "# Training files\n",
-    "files = glob.glob('../data/INT_data/INT_weather_set_parts_*')\n",
+    "files = glob.glob('../data/WHT_data/WHT_weather_set_parts_*')\n",
     "files = sorted(files)\n",
-    "INT_parts = [pd.read_csv(file_path) for file_path in files]\n",
+    "WHT_parts = [pd.read_csv(file_path) for file_path in files]\n",
     "\n",
     "# Concatenate the DataFrames into a single training set\n",
-    "INT_data = pd.concat(INT_parts, ignore_index=True)"
+    "WHT_data = pd.concat(WHT_parts, ignore_index=True)"
    ]
   },
   {
@@ -224,30 +224,30 @@
     }
    ],
    "source": [
-    "INT_data['sampletime'] = pd.to_datetime(INT_data['sampletime'])\n",
+    "WHT_data['sampletime'] = pd.to_datetime(WHT_data['sampletime'])\n",
     "\n",
     "# Extract year\n",
-    "INT_data['year'] = INT_data['sampletime'].dt.year\n",
+    "WHT_data['year'] = WHT_data['sampletime'].dt.year\n",
     "\n",
     "# Extract month\n",
-    "INT_data['month'] = INT_data['sampletime'].dt.month\n",
+    "WHT_data['month'] = WHT_data['sampletime'].dt.month\n",
     "\n",
     "# Extract day\n",
-    "INT_data['day'] = INT_data['sampletime'].dt.day\n",
+    "WHT_data['day'] = WHT_data['sampletime'].dt.day\n",
     "\n",
     "# Extract hour\n",
-    "INT_data['hour'] = INT_data['sampletime'].dt.hour\n",
+    "WHT_data['hour'] = WHT_data['sampletime'].dt.hour\n",
     "\n",
     "# Extract minute\n",
-    "INT_data['minute'] = INT_data['sampletime'].dt.minute\n",
+    "WHT_data['minute'] = WHT_data['sampletime'].dt.minute\n",
     "\n",
     "# Extract second\n",
-    "INT_data['second'] = INT_data['sampletime'].dt.second\n",
+    "WHT_data['second'] = WHT_data['sampletime'].dt.second\n",
     "\n",
     "# Drop the 'sampletime' column\n",
-    "INT_data.drop(columns=['sampletime'], inplace=True)\n",
+    "WHT_data.drop(columns=['sampletime'], inplace=True)\n",
     "\n",
-    "INT_data.head()"
+    "WHT_data.head()"
    ]
   },
   {
@@ -334,19 +334,19 @@
    "source": [
     "# Convert the numeric values into float32\n",
     "# We need to convert each category into float32\n",
-    "columns = INT_data.columns\n",
+    "columns = WHT_data.columns\n",
     "\n",
     "# There are some missing values with '\\\\N' in the variables. Let's transform into an arbitrary number\n",
     "for ii in columns[1:]:\n",
-    "    INT_data[ii][INT_data[ii] == '\\\\N'] = -1\n",
+    "    WHT_data[ii][WHT_data[ii] == '\\\\N'] = -1\n",
     "    # Converting into float32\n",
-    "    INT_data[ii] = INT_data[ii].astype('float32')\n",
+    "    WHT_data[ii] = WHT_data[ii].astype('float32')\n",
     "\n",
     "# Converting wind speed to numeric\n",
-    "INT_data['localwindspeed'] = pd.to_numeric(INT_data['localwindspeed'], errors='coerce')\n",
+    "WHT_data['localwindspeed'] = pd.to_numeric(WHT_data['localwindspeed'], errors='coerce')\n",
     "\n",
     "# Now we can count the number of NaNs in each category\n",
-    "print(INT_data.isna().sum())"
+    "print(WHT_data.isna().sum())"
    ]
   },
   {
