New cleaned files

--- a/notebooks/ML_humidity.ipynb
+++ b/notebooks/ML_humidity.ipynb
@@ -438,6 +438,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "7e11f382-ffea-4ca0-8edf-8dc5a25443cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#def split_and_save(set, name, num_parts = 4):\n",
+    "    # Splitting the dataset set into n-parts\n",
+    "#    split_indices = [i * len(set) // num_parts for i in range(1, num_parts)]\n",
+    "#    tt_set_parts = np.split(set, split_indices)\n",
+    "    \n",
+    "    # Saving each part into a separate file\n",
+    "#    for i, part in enumerate(tt_set_parts):\n",
+    "#        part.to_csv(f'../data/data_cleaned/{name}_set_parts_{i + 1}.csv', index=False)\n",
+    "\n",
+    "#split_and_save(WHT_data, 'cleaned_forecast', num_parts = 15)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "6c8bc631-3f23-429f-ad70-f7a08f46b869",
    "metadata": {},
