--- a/notebooks/ML_humidity.ipynb
+++ b/notebooks/ML_humidity.ipynb
@@ -924,9 +924,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d0c57444-1cce-4250-b201-05a4e2cfd7e6",
+   "metadata": {},
+   "source": [
+    "## Time Series"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95782a10-f37d-401d-a438-883bd7da1589",
+   "id": "5aaa4d84-be0b-4b1d-885f-2dd321a76eaa",
    "metadata": {},
    "outputs": [],
    "source": []
