Update including dummification of variables for ML algorithms

--- a/notebooks/ML_humidity.ipynb
+++ b/notebooks/ML_humidity.ipynb
@@ -469,9 +469,7 @@
   {
    "cell_type": "markdown",
    "id": "ec29d584-56de-4528-a8e7-f035fd83e2ca",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Data Visualization"
    ]
@@ -574,9 +572,7 @@
   {
    "cell_type": "markdown",
    "id": "aa6b5462-2b53-447c-a398-b2f386802823",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Machine Learning models"
    ]
@@ -601,8 +597,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target = WHT_data.relativehumidity\n",
-    "data   = WHT_data.drop(columns='relativehumidity')"
+    "target = WHT_data.relativehumidity # Target variable\n",
+    "data   = WHT_data.drop(columns='relativehumidity') # Array of features\n",
+    "\n",
+    "# We dummify the year, day, month and hour so first we need to convert the variables into integers\n",
+    "# List of columns to convert into dummy without gender and agg\n",
+    "cols_to_dummy = data.columns.difference(['hour', 'day', 'month', 'year'])\n",
+    "\n",
+    "# Convert the columns into variable dummies\n",
+    "data = pd.get_dummies(data, columns=cols_to_dummy)"
    ]
   },
   {
@@ -612,8 +615,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler = preprocessing.MinMaxScaler().fit(data)\n",
-    "data[data.columns] = pd.DataFrame(scaler.transform(data), index= data.index)"
+    "# Scaling numerical columns\n",
+    "cols_to_scale = ['airtemperature', 'windspeed']\n",
+    "\n",
+    "# Calling the MinMax scaler transformation\n",
+    "scaler = preprocessing.MinMaxScaler()\n",
+    "\n",
+    "# Rescaling the columns\n",
+    "data[cols_to_scale] = scaler.fit_transform(data[cols_to_scale])"
    ]
   },
   {
